src/pages/Shop.css
/*Used to hold all of the elements in the correct spot on the page. 
Needed to use the grid format to have four shop items in a line*/
.wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 30px;
  row-gap: 1em;
}

/* Text for the heading on the shop page. Used the same font and size as other headers 
but created this do to the wrapper used on the shop */
.shopTitle {
  position: absolute;
  width: 733px;
  height: 42px;
  left: 334px;
  top: 114px;

  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  font-size: 36px;
  line-height: 42px;

  color: #404040;
}

/*Used the same font but different size and height for the name of the trophy. 
This is used in the grid pattern to display the name in the top left corner*/
 .trophyName {
  position: absolute;
  width: 199.68px;
  height: 14.82px;

  font-style: initial;
  font-weight: 400;
  font-size: 18px;
  line-height: 21px;
  text-align: left;

  color: #000000;
}

/*Used to display the trophy image. Creates the right size for the grid and the box type*/
.photoSize {
  height: 175px;
  width: 175px;
  position: relative;
  padding-left: 10px;
  padding-top: 10px;
}

/* The style for the blue button that is located n each of the trophies if you have enough coins. */
.blueBuyButton {
  position: relative;
  width: 200px;
  height: 36px;
  padding-top: 5px;
  background: #2295FF;
  border: 2px solid rgba(34, 149, 255, 0.5);
  box-sizing: border-box;
  border-radius: 6px;
  cursor: pointer;
}

/* The white text that is displayed on top of the blue button to show how much the coins are worth*/
.buybuttonwords {
  position: relative;
  width: 199.68px;
  height: 14.82px;

  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 21px;
  text-align: center;

  color: #FFFFFF;
}

/*Similar to the blue button. This created the grey button that is used when the user doesn't have enough coins to purchase the trophy*/
.ownedButton {
  position: relative;
  width: 200px;
  height: 36px;
  padding-top: 5px;
  border: 2px solid #808080;
  box-sizing: border-box;
  border-radius: 6px;
}

/* The grey text that is displayed on top of the grey button to say that the user doesn't have enough coins to purchase this token*/
.ownbuttonwords {
  position: relative;
  width: 199.68px;
  height: 14.82px;

  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 21px;
  text-align: center;

  color: #808080;
}

/*This component is used to place the buttons in the middle of each of the grey boxes*/
.center {
  position: relative;
  top: 5%;
  width: 100%;
  text-align: center;
  font-size: 18px;
}

/*Sizes the medal icon used to show the most purchased item in the class*/
.bestItem {
  height: 55px;
  width: 42px;
  position: relative;
  padding-left: 10px;
  padding-top: 10px;
  cursor: pointer;
}

/*Used to place the award icon in the right location of the grey box*/
.topRight {
  position: absolute;
  left: 17%;
  top: 12.5%;
  bottom: 76.59%;
  text-align: right;
}

